# copse

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/workflows/: bench-cv.yml  bench-noise.yml  build-and-test.yml  ci.yml  coverage.yml  packaging.yml  release.yml  sanitizers.yml
benchmarks/: CMakeLists.txt  bench_insert.cpp  bench_perf_ikd.cpp  bench_rebuild.cpp  bench_remove.cpp  bench_search.cpp
benchmarks/ikd_shim/: ikd_adapter.inc  ikd_adapter_bg_off.cpp  ikd_adapter_bg_on.cpp  ikd_bg_off.h  ikd_bg_on.h  ikd_facade.h
benchmarks/ikd_shim/pcl/: point_types.h
cmake/: ClangTidy.cmake  Dependencies.cmake  FindCatch2.cmake  IkdTree.cmake  Packaging.cmake  clang_tidy.cmake  copseConfig.cmake.in
demo/: CMakeLists.txt  inspectable_kd_tree.hpp  public_viz.cpp  structure_viz.cpp
docs/: TODO.md  fixed_kd_tree.md
docs/benchmark/: baseline.tsv  insert.md  rebuild.md  remove.md  search.md  vs_ikd_tree.md
docs/design/: bench-vs-ikd.md  fixed-size-kdtree.md
docs/research/: fixed_size_kdtree.md  ikd_tree_benchmark.md  spatial_pruning_alternatives.md
examples/find_package/: CMakeLists.txt  main.cpp
include/copse/: bbox.hpp  copse.hpp  kd_tree.hpp  point.hpp
include/copse/impl/: kd_tree_impl.hpp  leaf_bucket.hpp  point_store.hpp  point_traits.hpp  search_kernel.hpp  tree_builder.hpp  tree_node.hpp
include/pkd_tree/: fixed_kd_tree.hpp  pkd_tree.hpp
include/pkd_tree/impl/: fixed_kd_tree_impl.hpp  leaf_bucket.hpp  point_store.hpp  point_traits.hpp  search_kernel.hpp  tree_builder.hpp  tree_node.hpp
include/topiary/: bbox.hpp  kd_tree.hpp  topiary.hpp
include/topiary/impl/: kd_tree_impl.hpp  leaf_bucket.hpp  point_store.hpp  point_traits.hpp  search_kernel.hpp  tree_builder.hpp  tree_node.hpp
src/: fixed_kd_tree.cpp  fixed_kd_tree_impl.cpp  kd_tree.cpp  kd_tree_impl.cpp  leaf_bucket.cpp  point_store.cpp  search_kernel.cpp  tree_builder.cpp
tests/: CMakeLists.txt  test_construction.cpp  test_delete.cpp  test_fixed_kd_tree.cpp  test_insert.cpp  test_kd_tree.cpp  test_leaf_bucket.cpp  test_point_store.cpp  test_rebuild.cpp  test_remove.cpp  test_search.cpp  test_search_kernel.cpp  test_tree_builder.cpp  test_tree_node.cpp
tools/: bench_regression.sh
